--- a/VehicleRentalManager/Components/_Imports.razor
+++ b/VehicleRentalManager/Components/_Imports.razor
@@ -5,7 +5,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
 @using VehicleRentalManager
 @using VehicleRentalManager.Components
 @using VehicleRentalManager.Components.Layout
+@using VehicleRentalManager.Services
