fixed the conflict in csproj

--- a/VehicleRentalManager/Components/Pages/Auth.razor
+++ b/VehicleRentalManager/Components/Pages/Auth.razor
@@ -70,7 +70,7 @@
                     Sign in with Google
                 </a>
 
-                <p> For experience an admin account, sign in with the following credentials: </p>
+                <p> To test using an account with access, sign in with the following credentials: </p>
                 <p> E-mail: cse325vrm@gmail.com </p>
                 <p> Password: VRMcse325! </p>
             }
